--- a/client/style.css
+++ b/client/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: #f5f5f5;
+    background-color: #949398ff;
     color: #333;
     font-size: 16px;
     line-height: 1.6;
@@ -14,7 +14,7 @@ body {
 
 /* Header */
 header {
-    background-color: #2c3e50;
+    background-color: #f4df4eff;
     padding: 15px 0;
     position: fixed;
     width: 100%;
